<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/Text_question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonStyle"
                android:layout_weight="1"
                android:text="@string/Button_true" />

            <Button
                android:id="@+id/button_false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonStyle"
                android:layout_weight="1"
                android:text="@string/Button_false" />
        </LinearLayout>

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_margin="18dp"
            android:text="@string/Button_Next"
            android:drawableRight="@drawable/ic_you" />

        <Button
            android:id="@+id/button_Tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Button_Answer"
            />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>